# rustblocks

./: Cargo.toml  README.md  rustblocks.toml
src/: block.rs  main.rs
